k8s/back_end.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back  
  template:
    metadata:
      labels:
        app: back 
    spec:
      containers:
        - name: back-container
          image: saxenarajat499/employ_backend:v1
          ports:
          - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back  
  ports:
    - port: 3000  
      name: back
      targetPort: 3000  
  type: NodePort
