k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo  # This matches the label in the template below
  template:
    metadata:
      labels:
        app: mongo  # This label should match the selector in the Service
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongo  
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
