k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
spec:
  rules:
  - host: backend.local  
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
